@@ -102,6 +102,28 @@ class FirmServiceTest {
     }
 
     @Test
+    void getUserActiveAllFirms_hasChildrenFirm() {
+        Firm firm1 = Firm.builder().name("F1").childFirms(Set.of(Firm.builder().name("FC1").build())).build();
+        UserProfile up1 = UserProfile.builder().activeProfile(true).userProfileStatus(UserProfileStatus.COMPLETE).firm(firm1).build();
+        UserProfile up2 = UserProfile.builder().activeProfile(false).userProfileStatus(UserProfileStatus.COMPLETE).firm(Firm.builder().name("F2").build()).build();
+        Set<UserProfile> userProfiles = Set.of(up1, up2);
+        EntraUser entraUser = EntraUser.builder().userProfiles(userProfiles).multiFirmUser(true).build();
+        List<FirmDto> firms = firmService.getUserActiveAllFirms(entraUser);
+        assertThat(firms).hasSize(2);
+    }
+
+    @Test
+    void getUserActiveAllFirms_has_no_ChildrenFirm() {
+        Firm firm1 = Firm.builder().name("F1").build();
+        UserProfile up1 = UserProfile.builder().activeProfile(true).userProfileStatus(UserProfileStatus.COMPLETE).firm(firm1).build();
+        UserProfile up2 = UserProfile.builder().activeProfile(false).userProfileStatus(UserProfileStatus.COMPLETE).firm(Firm.builder().name("F2").build()).build();
+        Set<UserProfile> userProfiles = Set.of(up1, up2);
+        EntraUser entraUser = EntraUser.builder().userProfiles(userProfiles).multiFirmUser(true).build();
+        List<FirmDto> firms = firmService.getUserActiveAllFirms(entraUser);
+        assertThat(firms).hasSize(1);
+    }
+
+    @Test
     void getUserFirmsByUserId() {
         // Given
         UUID userId = UUID.randomUUID();
@@ -219,9 +241,9 @@ class FirmServiceTest {
                     .build();
 
             allFirms = List.of(
-                    new FirmDto(UUID.randomUUID(), "Test Firm 1", "TF1"),
-                    new FirmDto(UUID.randomUUID(), "Test Firm 2", "TF2"),
-                    new FirmDto(UUID.randomUUID(), "Another Firm", "AF1")
+                    new FirmDto(UUID.randomUUID(), "Test Firm 1", "TF1", false, false),
+                    new FirmDto(UUID.randomUUID(), "Test Firm 2", "TF2", false, false),
+                    new FirmDto(UUID.randomUUID(), "Another Firm", "AF1", false, false)
             );
 
             // Setup cache mock
@@ -327,7 +349,7 @@ class FirmServiceTest {
 
             // Then
             assertThat(result).hasSize(1);
-            assertThat(result.get(0).getName()).isEqualTo("Test Firm 1");
+            assertThat(result.getFirst().getName()).isEqualTo("Test Firm 1");
         }
 
         @Test
@@ -337,7 +359,7 @@ class FirmServiceTest {
 
             // Then
             assertThat(result).hasSize(1);
-            assertThat(result.get(0).getName()).isEqualTo("Test Firm 1");
+            assertThat(result.getFirst().getName()).isEqualTo("Test Firm 1");
         }
 
         @Test
@@ -436,7 +458,7 @@ class FirmServiceTest {
 
         // Then
         assertThat(result).hasSize(1);
-        assertThat(result.get(0).getName()).isEqualTo("ABC Legal Services");
+        assertThat(result.getFirst().getName()).isEqualTo("ABC Legal Services");
         verify(firmRepository).findByNameOrCodeContaining(trimmedSearchTerm);
         verify(firmRepository, never()).findAll();
     }
@@ -528,7 +550,7 @@ class FirmServiceTest {
 
         // Then
         assertThat(result).hasSize(1);
-        assertThat(result.get(0).getCode()).isEqualTo("ABC001");
+        assertThat(result.getFirst().getCode()).isEqualTo("ABC001");
         verify(firmRepository).findByNameOrCodeContaining(searchTerm.trim());
     }
 
@@ -643,7 +665,7 @@ class FirmServiceTest {
 
             // Assert
             assertThat(result).hasSize(1);
-            assertThat(result.get(0).getName()).isEqualTo("Cached Firm 1");
+            assertThat(result.getFirst().getName()).isEqualTo("Cached Firm 1");
             verify(firmRepository, never()).findAll();
             verify(cache, never()).put(anyString(), any());
         }
@@ -660,7 +682,7 @@ class FirmServiceTest {
 
             // Assert
             assertThat(result).hasSize(1);
-            assertThat(result.get(0).getName()).isEqualTo("Test Firm");
+            assertThat(result.getFirst().getName()).isEqualTo("Test Firm");
         }
 
         @Test
